fix: replaced references to guava's predicate